# libtiff

./: CMakeLists.txt  dist.info  tif_config.h.cmake
include/: tif_config.h  tiffconf.h
